# high_performance_python_2e

./: .gitignore  pyproject.toml
07_compiling/pytorch/: diffusion_numpy.py
08_concurrency/cralwer/: metric_data.json
08_concurrency/cralwer/tornado/: crawler.py
08_concurrency/workload/: workloads.json
09_multiprocessing/np_shared_example/: np_shared.py
09_multiprocessing/prime_generation/: primes_pool.py  primes_queue.py  primes_queue_less_work.py
09_multiprocessing/prime_validation/: primes_pool_per_number_value_withinit.py
10_clusters/ipython_parallel/: pi_ipython_cluster.py
