[tool.poetry]
name = "high_performance_python_2e"
version = "0.1.0"
description = ""
authors = ["ralphribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
torch = "^1.9.0"
tqdm = "^4.62.2"
gevent = "^21.8.0"
tornado = "^6.1"
aiohttp = "^3.7.4"
pycurl = "^7.44.1"
requests = "^2.26.0"
bcrypt = "^3.2.0"
uvloop = "^0.16.0"
joblib = "^1.0.1"
ipython = "^7.27.0"
redis = "^3.5.3"
prettytable = "^2.2.0"
fasteners = "^0.16.3"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
